# grpc-client

./: .gitmodules  Cargo.toml  README.md  sample.proto
protogen/: build.rs
settings/: grpc_client.toml
src/: collection_open.rs  compile.rs  grpc_build.rs  main.rs  root_widget.rs  state.rs
