[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.6.1"
serde = "1.0.164"
serde_derive = "1.0.164"
toml = "0.8.12"
log = "0.4.19"
prost = "0.12.4"
env_logger = "0.11.3"
chrono = "0.4.26"
druid = "0.8.3"

[build-dependencies]
tonic-build = "0.11"
